--- a/templates/user_verification.html
+++ b/templates/user_verification.html
@@ -3,7 +3,7 @@
     <body>
         <h3> Account verification </h3>
     <p> click on the link on the bottom below to verify your account</p>
-    <a style = "margin-top: 1rem" href="http://localhost:8000/users/verify/?token={token}">verify  your email </a>
+    <a style = "margin-top: 1rem" href="http://api.fafanlp.com/users/verify/?token={token}">verify  your email </a>
 
     </body>
 </html>
