--- a/templates/password_recovery.html
+++ b/templates/password_recovery.html
@@ -4,7 +4,7 @@
         <h3> Password recovery </h3>
         <p>You received this email because you have requested for a change of password. If you didn't, just ignore this email</p>
     <p> click on the link on the bottom below to change your password</p>
-    <a style = "margin-top: 1rem" href="http://localhost:8000/users/password-recovery/?token={token}">verify  your email </a>
+    <a style = "margin-top: 1rem" href="http://api.fafanlp.com/users/password-recovery/?token={token}">verify  your email </a>
 
     </body>
 </html>
